--- a/Bohemia/src/main/resources/application.properties
+++ b/Bohemia/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=bohemia
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/bohemia
 spring.datasource.username=postgres
-spring.datasource.password=241593
+spring.datasource.password=12345678
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=create
