docs: :memo: We added documentation and changed the reaction code

--- a/Bohemia/src/main/resources/application.properties
+++ b/Bohemia/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=bohemia
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/bohemia
 spring.datasource.username=postgres
-spring.datasource.password=12345678
+spring.datasource.password=241593
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
@@ -18,3 +18,4 @@ springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/doc/swagger-ui.html
 #Permite habilitar el proceso de scaneo de clases y las clase asociadas
 springdoc.packages-to-scan=com.example.Bohemia.web.controlador
+
