--- a/Bohemia/pom.xml
+++ b/Bohemia/pom.xml
@@ -11,6 +11,7 @@
     <groupId>com.redsocial</groupId>
     <artifactId>bohemia</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>war</packaging>
     <name>bohemia</name>
     <description>Demo project for Spring Boot</description>
     <url/>
@@ -80,16 +81,10 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
-            <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>2.3.0</version>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
         </dependency>
-
-
     </dependencies>
 
     <build>
